<resources>
    <string name="app_name">PizzaApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_of_pizza_place">\n Jimmy\'s \n Tasty \n Pizza</string>
    <string name="start_button">CLICK TO ENTER</string>
    <string name="home">Jimmy\'\s Pizza Home</string>
    <string name="deep_pan">Deep Pan</string>
    <string name="thin_crust">Thin Crust</string>
    <string name="crust">CRUST</string>
    <string name="cancel">CANCEL</string>
    <string name="next">NEXT</string>
    <string name="pizza">PIZZA</string>
    <string name="margarita">MARGARITA</string>
    <string name="beef_special">BEEF SPECIAL</string>
    <string name="vegetarian_supreme">VEGETARIAN SUPREME</string>
    <string name="brazilian_treat">BRAZILIAN TREAT</string>
    <string name="subtotal">Subtotal %s</string>
    <string name="drinks">DRINKS</string>
    <string name="coke">Coke</string>
    <string name="lemonade">Lemonade</string>
    <string name="ginger_beer">Ginger Beer</string>
    <string name="orange_juice">Orange Juice</string>
    <string name="order_summary">Order Summary</string>
    <string name="send_order">Send Order</string>
    <string name="new_pizza_order">New Pizza Order</string>
    <string name="home_title">Home</string>
    <string name="order_details">Crust: %1$s crust \n Pizza: %2$s \nDrinks: %3$s \n Total: %4$s \n\n Thank you!</string>
</resources>