<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CrustFragment">
    
    <ScrollView
        android:background="#ffeb3b"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/crust_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crust"
                app:layout_constraintBottom_toTopOf="@+id/crust_selection"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/NameStyle" />

            <RadioGroup
                android:id="@+id/crust_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/deep_pan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deep_pan"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/thin_crust"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thin_crust"
                    android:textStyle="bold" />
            </RadioGroup>

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/crust_selection"/>

            <Button
                android:id="@+id/next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancel_btn"
                app:layout_constraintTop_toTopOf="@+id/cancel_btn" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/next_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                android:layout_marginTop="16dp"
                tools:layout_editor_absoluteY="342dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>