<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DrinkFragment">

    <data>
        <variable
            name="viewModel"
            type="com.jimmy.pizzaapp.model.OrderViewModel" />
    </data>

    <ScrollView
        android:background="#ffeb3b"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/drinks_text"
                style="@style/NameStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aladin"
                android:text="@string/drinks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/drinks_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/coke_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coke"
                    android:checked="@{viewModel.drinks.equals(@string/coke)}"
                    android:onClick="@{() -> viewModel.setDrinks(@string/coke)}"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/lemonade_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lemonade"
                    android:checked="@{viewModel.drinks.equals(@string/lemonade)}"
                    android:onClick="@{() -> viewModel.setDrinks(@string/lemonade)}"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/gingerbeer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ginger_beer"
                    android:checked="@{viewModel.drinks.equals(@string/ginger_beer)}"
                    android:onClick="@{() -> viewModel.setDrinks(@string/ginger_beer)}"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/orange_juice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orange_juice"
                    android:checked="@{viewModel.drinks.equals(@string/orange_juice)}"
                    android:onClick="@{() -> viewModel.setDrinks(@string/orange_juice)}"
                    android:textStyle="bold" />

            </RadioGroup>

            <View
                android:id="@+id/divider_pizza"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drinks_selection" />

            <TextView
                android:id="@+id/subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:text="@{@string/subtotal(viewModel.price)}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/drinks_selection"
                tools:text="Subtotal £10.00" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/nextButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nextButton" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancelButton"
                app:layout_constraintTop_toBottomOf="@+id/subtotal" />



        </androidx.constraintlayout.widget.ConstraintLayout>




    </ScrollView>



</layout>