<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PizzaFragment">

    <data>
        <variable
            name="viewModel"
            type="com.jimmy.pizzaapp.model.OrderViewModel" />
    </data>
    
    <ScrollView
        android:background="#ffeb3b"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/pizza_text"
                style="@style/NameStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aladin"
                android:text="@string/pizza"
                app:layout_constraintBottom_toTopOf="@+id/pizza_selection"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/pizza_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/margarita_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/margarita"
                    android:checked="@{viewModel.pizza.equals(@string/margarita)}"
                    android:onClick="@{() -> viewModel.setPizza(@string/margarita)}"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/beef_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beef_special"
                    android:checked="@{viewModel.pizza.equals(@string/beef_special)}"
                    android:onClick="@{() -> viewModel.setPizza(@string/beef_special)}"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/vegetarian_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian_supreme"
                    android:checked="@{viewModel.pizza.equals(@string/vegetarian_supreme)}"
                    android:onClick="@{() -> viewModel.setPizza(@string/vegetarian_supreme)}"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/brazilian_treat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brazilian_treat"
                    android:checked="@{viewModel.pizza.equals(@string/brazilian_treat)}"
                    android:onClick="@{() -> viewModel.setPizza(@string/brazilian_treat)}"
                    android:textStyle="bold" />

            </RadioGroup>

            <View
                android:id="@+id/divider_pizza"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pizza_selection" />

            <TextView
                android:id="@+id/subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:text="@{@string/subtotal(viewModel.price)}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pizza_selection"
                tools:text="Subtotal £10.00" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/nextButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nextButton" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancelButton"
                app:layout_constraintTop_toBottomOf="@+id/subtotal" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>